--- a/static/css/graphite-observer.css
+++ b/static/css/graphite-observer.css
@@ -81,11 +81,11 @@ span.desc {
     border-top: 3px solid #aaaa33;
 }
 
+/* messages */
 #messages {
     float: left;
-    width: 60%;
+    width: 40%;
     height: 100%;
-    border-right: 1px solid #aaaa33;
 }
 
 div.message {
@@ -100,6 +100,22 @@ div.critical {
     color: #aa3333;
 }
 
+/* settings */
+#settings {
+    float: left;
+    width: 20%;
+    height: 100%;
+    padding: 10px;
+    border-right: 1px solid #aaaa33;
+}
+
+/*
+#filter {
+    background-color: #333;
+}
+*/
+
+/* target info */
 #targetinfo {
     float: left;
     width: 30%;
